--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,17 @@
   overflow: hidden;
   display: flex;
   flex-direction: row;
+  margin-top: 100px;
+  min-width: 420px !important;
+}
+
+@media screen and (max-width: 600px) {
+  .App {
+    height: 80vw;
+  }
+  .App h1 {
+    font-size: 4vw;
+  }
 }
 
 .left-container {
@@ -26,27 +37,49 @@
   background-color: #e26553;
   height: 100%;
   color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .left-container label {
   font-size: 20px;
+  width: 100%;
 }
 
 .left-container input, .left-container select {
   margin: 10px 10px 10px 0;
   font-size: 20px;
+  width: 60%;
+  margin-left: 3%;
 }
 
 .left-container input[type=number] {
-  width: 50px;
+  width: 60%;
   margin-left: 3%;
   padding: 3px;
+}
+
+@media screen and (max-width: 700px) {
+  .left-container h1 {
+    font-size: 5vw;
+  }
+  .left-container input[type=number], .left-container select, .left-container input, .left-container label {
+    font-size: 3vw;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .left-container h1 {
+    font-size: 4vw;
+  }
 }
 
 .right-container {
   position: absolute;
   width: 60%;
-  height: 500px;
+  height: auto;
+  max-height: 90%;
   right: 0;
   top: 0;
   padding: 3%;
@@ -55,11 +88,20 @@
   flex-direction: column;
   font-size: 20px;
   overflow: scroll;
+  flex-grow: 2;
+}
+
+@media screen and (max-width: 750px) {
+  .right-container {
+    font-size: 2vw;
+    padding-top: 8vw;
+  }
 }
 
 article {
   position: relative;
   height: auto;
+  max-width: 90%;
 }
 
 button {
@@ -101,4 +143,22 @@ button i {
   background-repeat: no-repeat;
   margin: auto;
   margin-top: 25%;
+}
+
+@media screen and (max-width: 800px) {
+  .pig {
+    margin-top: 15%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .pig {
+    margin-top: 10%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .pig {
+    margin-top: 5%;
+  }
 }
