--- a/src/App.sass
+++ b/src/App.sass
@@ -11,6 +11,14 @@
   overflow: hidden
   display: flex
   flex-direction: row
+  margin-top: 100px
+  min-width: 420px !important
+  @media screen and (max-width: 600px)
+    height: 80vw
+    h1
+      font-size: 4vw
+
+
 
 .left-container
   position: absolute
@@ -23,20 +31,36 @@
   background-color: rgb(226, 101, 83)
   height: 100%
   color: white
+  display: flex
+  flex-direction: column
+  justify-content: space-around
   label
     font-size: 20px
+    width: 100%
   input, select
     margin: 10px 10px 10px 0
     font-size: 20px
+    width: 60%
+    margin-left: 3%
   input[type=number]
-    width: 50px
+    width: 60%
     margin-left: 3%
     padding: 3px
+  @media screen and (max-width: 700px)
+    h1
+      font-size: 5vw
+    input[type=number], select, input, label
+      font-size: 3vw
+  @media screen and (max-width: 600px)
+    h1
+      font-size: 4vw
+
 
 .right-container
   position: absolute
   width: 60%
-  height: 500px
+  height: auto
+  max-height: 90%
   right: 0
   top: 0
   padding: 3%
@@ -45,10 +69,16 @@
   flex-direction: column
   font-size: 20px
   overflow: scroll
+  flex-grow: 2
+  @media screen and (max-width: 750px)
+    font-size: 2vw
+    padding-top: 8vw
+
 
 article
   position: relative
   height: auto
+  max-width: 90%
 
 button
   align-self: flex-start
@@ -78,3 +108,9 @@ button
   background-repeat: no-repeat
   margin: auto
   margin-top: 25%
+  @media screen and (max-width: 800px)
+    margin-top: 15%
+  @media screen and (max-width: 700px)
+    margin-top: 10%
+  @media screen and (max-width: 600px)
+    margin-top: 5%
